// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepareCode Testing transformation for dynamic-import: code 1`] = `
""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.foo = foo;
function foo(onImport) {
  __linaria_dynamic_import("./foo").then(onImport);
}"
`;

exports[`prepareCode Testing transformation for dynamic-import: imports 1`] = `Map {}`;

exports[`prepareCode Testing transformation for dynamic-import: metadata 1`] = `null`;

exports[`prepareCode Testing transformation for dynamic-import-param: code 1`] = `
""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.foo = foo;
function foo(locale, onImport) {
  __linaria_dynamic_import("./foo/" + locale).then(onImport);
}"
`;

exports[`prepareCode Testing transformation for dynamic-import-param: imports 1`] = `Map {}`;

exports[`prepareCode Testing transformation for dynamic-import-param: metadata 1`] = `null`;

exports[`prepareCode Testing transformation for for-debug: code 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, 'asyncResolveFallback', {
  enumerable: true,
  get: function get() {}
});
Object.defineProperty(exports, 'collectExportsAndImports', {
  enumerable: true,
  get: function get() {}
});
Object.defineProperty(exports, 'slugify', {
  enumerable: true,
  get: function get() {
    return _slugify["default"];
  }
});
var _slugify = _interopRequireDefault(require('./slugify'));
function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    "default": obj
  };
}"
`;

exports[`prepareCode Testing transformation for for-debug: imports 1`] = `
Map {
  "./slugify" => [
    "default",
  ],
}
`;

exports[`prepareCode Testing transformation for for-debug: metadata 1`] = `null`;
